When calling `getDefinition` on a synthetic `MethodNode`, try to find the non-synthetic `MethodNode` whose non-default parameters match the synthetic method's. This provides working go-to-definition on method calls that use the synthetic overload of methods with default parameters.
Modernize/clean up `FileContentsTracker`; add self to copyright authors

Improve `SemanticTokensProvider#debugPrint`

Add `debugPrint` calls to and change comments to be more clear in `DefinitionProvider`

Don't use `ClassLoader.getSystemClassLoader().getParent()` as the parent `ClassLoader` for compilation units. This prevents class-not-found-exceptions (there are multiple kinds) for Groovy classes themselves due to `ClassLoader` isolation.