@@ -37,6 +37,7 @@ import org.eclipse.lsp4j.jsonrpc.messages.Either;
 
 import net.prominic.groovyls.compiler.ast.ASTNodeVisitor;
 import net.prominic.groovyls.compiler.util.GroovyASTUtils;
+import net.prominic.groovyls.util.FileContentsTracker;
 import net.prominic.groovyls.util.GroovyLanguageServerUtils;
 
 public class DefinitionProvider {
@@ -48,7 +49,8 @@ public class DefinitionProvider {
 
 	public CompletableFuture<Either<List<? extends Location>, List<? extends LocationLink>>> provideDefinition(
 			final TextDocumentIdentifier textDocument,
-			final Position position) {
+			final Position position,
+			final FileContentsTracker fct) {
 		if (ast == null) {
 			// this shouldn't happen, but let's avoid an exception if something
 			// goes terribly wrong.
@@ -60,31 +62,35 @@ public class DefinitionProvider {
 			return CompletableFuture.completedFuture(Either.forLeft(Collections.emptyList()));
 		}
 
+		// System.out.print("provideDefinition: offsetNode: ");
+		// SemanticTokensProvider.debugPrint(definitionNode, fct, ast);
+
 		var definitionNode = GroovyASTUtils.getDefinition(offsetNode, true, ast);
-		// System.out.println("provideDefinition: definitionNode: " + definitionNode);
 		if (definitionNode == null) {
 			return CompletableFuture.completedFuture(Either.forLeft(Collections.emptyList()));
 		}
 
+		// System.out.print("provideDefinition: definitionNode: ");
+		// SemanticTokensProvider.debugPrint(definitionNode, fct, ast);
+
 		var definitionURI = ast.getURI(definitionNode);
-		if (definitionURI == null) {
-			definitionURI = uri;
-		}
 
 		var location = GroovyLanguageServerUtils.astNodeToLocation(definitionNode, definitionURI);
 		if (location == null) {
-			if (definitionNode instanceof ConstructorNode) {
-				// This will "fall-through" to the if-block below!
-				definitionNode = ((ConstructorNode) definitionNode).getDeclaringClass();
+			if (definitionNode instanceof final ConstructorNode cn) {
+				// The constructor's class has no explicit constructor. Refer to the entire class.
+				definitionNode = cn.getDeclaringClass();
 				definitionURI = ast.getURI(definitionNode);
 			}
 			if (definitionNode instanceof ClassNode) {
+				// For some reason, ClassNodes of script classes (no explicit class body) have no range information.
+				// Refer to the script file in the simplest way possible.
 				location = new Location(definitionURI.toString(), new Range(new Position(), new Position(1, 1)));
-				return CompletableFuture.completedFuture(Either.forLeft(Collections.singletonList(location)));
+				return CompletableFuture.completedFuture(Either.forLeft(List.of(location)));
 			}
-			return CompletableFuture.completedFuture(Either.forLeft(Collections.emptyList()));
+			return CompletableFuture.completedFuture(Either.forLeft(List.of()));
 		}
 
-		return CompletableFuture.completedFuture(Either.forLeft(Collections.singletonList(location)));
+		return CompletableFuture.completedFuture(Either.forLeft(List.of(location)));
 	}
 }
